--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 #This is not a hack.
-1) [Install python 3]: https://www.python.org/ftp/python/3.10.5/python-3.10.5-amd64.exe
+1) [Install python 3](https://www.python.org/ftp/python/3.10.5/python-3.10.5-amd64.exe)
 2) run install.bat
 3) after installed packages run "run.bat"
